syntax = "proto3";

package Calc;

option go_package = "proto/gen;genv1";

service Calc {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Calculate (ExprRequest) returns (ExprResponse);
}

message RegisterRequest {
  string email = 1; // Email of the user to register.
  string password = 2; // Password of the user to register.
}

message RegisterResponse {
  int64 user_id = 1; // UID of the registered user.
}

message LoginRequest {
  string email = 1; // Email of the user to login.
  string password = 2; // Password of the user to login.
}

message LoginResponse {
  string token = 1; // Auth token of the logged in user.
}

message ExprRequest {
  string expr = 1; // Expression of the user.
  string uid = 2; // Id of the user.
}

message ExprResponse {
  int64 id = 1; // Id of the expression.
  string expression = 2;
  string answer = 3;
  int64 uid = 4;
}